--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -1,1 +1,30 @@
-<p>cadastro works!</p>
+<div class="area-cadastro">
+  <main id="container">
+    <section class="area-logo1">
+      <img src="assets/img/logo.png" alt="logo" />
+      <h2>Sua plataforma de Finanças</h2>
+    </section>
+
+    <section class="area-buttons">
+      <a routerLink="finances" class="finances">
+        <i class="material-icons">add_circle</i></a
+      >
+      <a class="add-finances"><i class="material-icons">search</i></a>
+    </section>
+  </main>
+
+  <mat-card class="form">
+    <mat-card-title>CADASTRAR</mat-card-title>
+    <form>
+      <mat-form-field class="w-100">
+        <input placeholder="Usuario" name="name" autocomplete="off" />
+      </mat-form-field>
+      <mat-form-field class="w-100">
+        <input placeholder="Nome" name="name" autocomplete="off" />
+      </mat-form-field>
+      <mat-form-field class="w-100">
+        <input type="password" placeholder="Senha" name="senha" />
+      </mat-form-field>
+    </form>
+  </mat-card>
+</div>
