--- a/src/app/view/login/login.component.html
+++ b/src/app/view/login/login.component.html
@@ -14,13 +14,13 @@
   </main>
 
   <mat-card class="form">
-    <mat-card-title>Novo Produto</mat-card-title>
+    <mat-card-title>LOGIN</mat-card-title>
     <form>
-      <mat-form-field>
-        <input matInput placeholder="Nome" name="name" />
+      <mat-form-field class="w-100">
+        <input placeholder="Nome" name="name" autocomplete="off" />
       </mat-form-field>
-      <mat-form-field>
-        <input matInput type="number" placeholder="Preço (R$)" name="price" />
+      <mat-form-field class="w-100">
+        <input type="password" placeholder="Senha" name="senha" />
       </mat-form-field>
     </form>
   </mat-card>
