--- a/src/app/view/cadastro/cadastro.component.html
+++ b/src/app/view/cadastro/cadastro.component.html
@@ -6,25 +6,11 @@
     </section>
 
     <section class="area-buttons">
-      <a routerLink="finances" class="finances">
-        <i class="material-icons">add_circle</i></a
-      >
-      <a class="add-finances"><i class="material-icons">search</i></a>
+      <a class="finances"> <i class="material-icons">check</i>Salvar</a>
+      <a routerLink="/login" class="add-finances">
+        <i class="material-icons">arrow_back</i>Login
+      </a>
     </section>
   </main>
-
-  <mat-card class="form">
-    <mat-card-title>CADASTRAR</mat-card-title>
-    <form>
-      <mat-form-field class="w-100">
-        <input placeholder="Usuario" name="name" autocomplete="off" />
-      </mat-form-field>
-      <mat-form-field class="w-100">
-        <input placeholder="Nome" name="name" autocomplete="off" />
-      </mat-form-field>
-      <mat-form-field class="w-100">
-        <input type="password" placeholder="Senha" name="senha" />
-      </mat-form-field>
-    </form>
-  </mat-card>
+  <app-create class="w-100"></app-create>
 </div>
