--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -1,18 +1,20 @@
 <main id="container">
   <section class="area-logo1">
-    <img src="assets/img/logo.png" alt="logo">
+    <img src="assets/img/logo.png" alt="logo" />
     <h2>Sua plataforma de Finanças</h2>
   </section>
-  
-  
+
   <section class="area-buttons">
-    <a routerLink="finances" class="finances"> <i class="material-icons">add_circle</i></a>
-    <a class="add-finances"><i class="material-icons">search</i></a>
+    <a routerLink="/add-finances" class="finances">
+      <i class="material-icons">add_circle</i>Add
+    </a>
+    <a routerLink="/finances" class="add-finances">
+      <i class="material-icons">search</i>Finanças
+    </a>
   </section>
-  
-  
-  <img class="area-logo2" src="assets/img/landing.svg"/>
-  
+
+  <img class="area-logo2" src="assets/img/landing.svg" />
+
   <p class="area-conn">
     Total de conexoes ja realizadas
     <i class="material-icons">favorite</i>
