--- a/src/app/view/login/login.component.css
+++ b/src/app/view/login/login.component.css
@@ -36,7 +36,7 @@ main .area-buttons a.add-finances {
 }
 
 main .area-buttons a.add-finances {
-  background-color: var(--color-primary-light);
+  background-color: var(--color-voltar);
 }
 
 main .area-buttons a.finances {
@@ -103,34 +103,4 @@ main .area-buttons a.finances:hover {
   main .area-buttons {
     display: flex;
   }
-}
-
-.form {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin-bottom: 7rem;
-}
-
-.form mat-card-title {
-  font-size: 4.6rem;
-  font-weight: 700;
-}
-
-.form form {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  width: 100%;
-  /* padding: 0 10rem; */
-}
-
-.form form input {
-  background-color: var(--color-text-in-primary);
-  height: 6.5rem;
-  padding: 0.5rem 1.5rem;
-  width: 100%;
 }
