cria tela de listagem, layout de card e informacoes

--- a/src/app/components/finance/finance-read/finance-read.component.html
+++ b/src/app/components/finance/finance-read/finance-read.component.html
@@ -1,1 +1,61 @@
-<p>finance-read works!</p>
+<mat-toolbar class="mat-elevation-z4 row gap-row-5 justify-content-around">
+  <mat-card class="example-card">
+    <mat-card-title
+      style="color: var(--color-background); background: var(--color-secondary)"
+      >Shiba Inu</mat-card-title
+    >
+    <mat-card-subtitle>Lucro</mat-card-subtitle>
+    <p>20/10/2021</p>
+    <hr />
+    <mat-card-content>
+      <p class="text-break">PRODUTO: {{ longText }}</p>
+      <p>QUANTIDADE: 10</p>
+      <p>VALOR UNITARIO: 4.00</p>
+      <p>VALOR TOTAL: 40.00</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button class="editar" mat-button>EDITAR</button>
+      <button class="apagar" mat-button>EXCLUIR</button>
+    </mat-card-actions>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-title
+      style="color: var(--color-background); background: var(--color-voltar)"
+      >Shiba Inu</mat-card-title
+    >
+    <mat-card-subtitle>Investimento</mat-card-subtitle>
+    <p>20/10/2021</p>
+    <hr />
+    <mat-card-content>
+      <p class="text-break">PRODUTO: {{ longText }}</p>
+      <p>QUANTIDADE: 10</p>
+      <p>VALOR UNITARIO: 4.00</p>
+      <p>VALOR TOTAL: 40.00</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button class="editar" mat-button>EDITAR</button>
+      <button class="apagar" mat-button>EXCLUIR</button>
+    </mat-card-actions>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <mat-card-title
+      style="color: var(--color-background); background: var(--color-secondary)"
+      >Shiba Inu</mat-card-title
+    >
+    <mat-card-subtitle>Lucro</mat-card-subtitle>
+    <p>20/10/2021</p>
+    <hr />
+    <mat-card-content>
+      <p class="text-break">PRODUTO: {{ longText }}</p>
+      <p>QUANTIDADE: 10</p>
+      <p>VALOR UNITARIO: 4.00</p>
+      <p>VALOR TOTAL: 40.00</p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button class="editar" mat-button>EDITAR</button>
+      <button class="apagar" mat-button>EXCLUIR</button>
+    </mat-card-actions>
+  </mat-card>
+</mat-toolbar>
