--- a/src/app/view/finance-crud/finance-crud.component.html
+++ b/src/app/view/finance-crud/finance-crud.component.html
@@ -1,4 +1,9 @@
-<button mat-raised-button class="primary">
-  Novo Produto
-</button>
-<app-finance-read></app-finance-read>
+<div class="area-finances">
+  <header id="container">
+    <section class="area-logo1">
+      <img src="assets/img/logo.png" class="w-100" alt="logo" />
+    </section>
+  </header>
+
+  <app-finance-read class="w-100 p-5"></app-finance-read>
+</div>
