--- a/src/app/view/finance-crud/finance-crud.component.css
+++ b/src/app/view/finance-crud/finance-crud.component.css
@@ -1,3 +1,44 @@
-button{
-  margin-bottom: 22px;
+header {
+  background: var(--color-primary);
+  height: 100%;
+  padding: 0 3rem;
+  overflow-x: hidden;
+  width: 100%;
+
+  position: fixed;
+  height: 250px;
+  z-index: 1;
+}
+
+header .area-logo1 {
+  align-self: center;
+}
+
+@media (min-width: 1100px) {
+  .area-finances {
+    display: flex;
+    flex-direction: column;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-content: center;
+  }
+}
+
+@media (max-width: 1099px) {
+  .area-finances {
+    display: flex;
+    flex-direction: column;
+  }
+
+  header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
