--- a/src/app/components/finance/finance-read/finance-read.component.html
+++ b/src/app/components/finance/finance-read/finance-read.component.html
@@ -1,17 +1,19 @@
 <mat-toolbar class="mat-elevation-z4 row gap-row-5 justify-content-around">
-  <mat-card class="example-card">
-    <mat-card-title
-      style="color: var(--color-background); background: var(--color-secondary)"
-      >Shiba Inu</mat-card-title
-    >
-    <mat-card-subtitle>Lucro</mat-card-subtitle>
+  <mat-card class="example-card" *ngFor="let item of dados">
+    <mat-card-title *ngIf="item.status == 'Lucro'" class="green">{{
+      item.titulo
+    }}</mat-card-title>
+    <mat-card-title *ngIf="item.status == 'Investimento'" class="red">{{
+      item.titulo
+    }}</mat-card-title>
+    <mat-card-subtitle>{{ item.status }}</mat-card-subtitle>
     <p>20/10/2021</p>
     <hr />
     <mat-card-content>
-      <p class="text-break">PRODUTO: {{ longText }}</p>
-      <p>QUANTIDADE: 10</p>
-      <p>VALOR UNITARIO: 4.00</p>
-      <p>VALOR TOTAL: 40.00</p>
+      <p class="text-break">PRODUTO: {{ item.titulo }}</p>
+      <p>QUANTIDADE: {{ item.quantidade }}</p>
+      <p>VALOR UNITARIO: {{ item.valor_unitario }}</p>
+      <p>VALOR TOTAL: {{ item.valor_unitario * item.quantidade }}</p>
     </mat-card-content>
     <mat-card-actions>
       <button class="editar" mat-button>EDITAR</button>
@@ -19,7 +21,7 @@
     </mat-card-actions>
   </mat-card>
 
-  <mat-card class="example-card">
+  <!-- <mat-card class="example-card">
     <mat-card-title
       style="color: var(--color-background); background: var(--color-voltar)"
       >Shiba Inu</mat-card-title
@@ -57,5 +59,5 @@
       <button class="editar" mat-button>EDITAR</button>
       <button class="apagar" mat-button>EXCLUIR</button>
     </mat-card-actions>
-  </mat-card>
+  </mat-card> -->
 </mat-toolbar>
