--- a/src/app/components/usuario-crud/create/create.component.css
+++ b/src/app/components/usuario-crud/create/create.component.css
@@ -1,11 +1,10 @@
 .form {
-  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-bottom: 7rem;
+  margin-bottom: 10rem;
 }
 
 .form mat-card-title {
@@ -18,12 +17,62 @@
   flex-direction: column;
   gap: 2rem;
   width: 100%;
-  /* padding: 0 10rem; */
 }
 
 .form form input {
   background-color: var(--color-text-in-primary);
-  height: 6.5rem;
+  height: 5.5rem;
   padding: 0.5rem 1.5rem;
   width: 100%;
+  box-sizing: border-box;
 }
+
+ .area-buttons {
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
+ .area-buttons button.finances,
+ .area-buttons button.add-finances {
+  max-width: 220px;
+  width: 100%;
+  min-width: 150px;
+  height: 7rem;
+  border-radius: 0.8rem;
+  margin-right: 1.4rem;
+  font: 700 2.4rem Archivo;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  transition: background 0.2s;
+  color: var(--color-button-text);
+  cursor: pointer;
+}
+
+ .area-buttons button.add-finances {
+  background-color: var(--color-voltar);
+}
+
+ .area-buttons button.finances {
+  background-color: var(--color-secondary);
+}
+
+ .area-buttons button.add-finances:hover,
+ .area-buttons button.finances:hover {
+  filter: brightness(0.95);
+}
+
+@media (min-width: 1100px) {
+   .area-buttons {
+    grid-area: area-buttons;
+  }
+}
+
+@media (max-width: 1099px) {
+   .area-buttons {
+    display: flex;
+  }
+}
+
