--- a/src/app/components/usuario-crud/login-user/login-user.component.html
+++ b/src/app/components/usuario-crud/login-user/login-user.component.html
@@ -1,11 +1,20 @@
 <mat-card class="form">
   <mat-card-title>LOGIN</mat-card-title>
   <form>
-    <mat-form-field class="w-100">
-      <input placeholder="Usuario" name="name" autocomplete="off" />
+    <mat-form-field>
+      <label for="login">Login</label>
+      <input matInput id="login" name="login" [(ngModel)]="user.login" autocomplete="off" />
     </mat-form-field>
-    <mat-form-field class="w-100">
-      <input type="password" placeholder="Senha" name="senha" />
+    <mat-form-field>
+      <label for="senha">Senha</label>
+      <input type="password" id="senha" matInput [(ngModel)]="user.senha" name="senha" />
     </mat-form-field>
   </form>
+
+  <section class="area-buttons">
+    <button class="finances" (click)="entrar()"> <i class="material-icons">check</i> Entrar </button>
+    <button (click)="irCadastro()" class="add-finances">
+      <i class="material-icons">add_circle</i>Cadastrar
+    </button>
+  </section>
 </mat-card>
