--- a/src/app/view/home/home.component.css
+++ b/src/app/view/home/home.component.css
@@ -22,8 +22,10 @@ main .area-conn{
 
 main .area-buttons a.finances,
 main .area-buttons a.add-finances{
-  width: 220px;
-  height: 7.5rem;
+  max-width: 220px;
+  width: 100%;
+  min-width: 150px;
+  height: 7rem;
   border-radius: 0.8rem;
   margin-right: 1.4rem;
   font: 700 2.4rem Archivo;
@@ -85,6 +87,7 @@ main .area-buttons a.finances:hover{
   main .area-buttons{
     grid-area: area-buttons;
     display: flex;
+    /* padding: 0 20px; */
   }
 
   main .area-conn{
@@ -123,7 +126,8 @@ main .area-buttons a.finances:hover{
 
   main .area-logo2{
     grid-area: area-logo2;
-    width: 500px;
+    width: 350px;
+    height: 100%;
     order: 2;
     
   }
@@ -132,7 +136,7 @@ main .area-buttons a.finances:hover{
     grid-area: area-buttons;
     display: flex;
     order: 3;
-    
+    padding: 1rem;
   }
 
   main .area-conn{
