privando rotas nao nao autenticadas

--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -5,10 +5,10 @@
   </section>
 
   <section class="area-buttons">
-    <a routerLink="/add-finances" class="finances">
+    <a routerLink="/add-finances" routerLinkActive="selected" class="finances">
       <i class="material-icons">add_circle</i>Add
     </a>
-    <a routerLink="/finances" class="add-finances">
+    <a routerLink="/finances" routerLinkActive="selected"class="add-finances">
       <i class="material-icons">search</i>Finanças
     </a>
   </section>
