--- a/src/app/view/finance-crud/finance-crud.component.html
+++ b/src/app/view/finance-crud/finance-crud.component.html
@@ -5,5 +5,5 @@
     </section>
   </header>
 
-  <app-finance-read class="w-100 p-5"></app-finance-read>
+  <app-finance-listagem class="w-100 p-5"></app-finance-listagem>
 </div>
