--- a/src/app/view/home/home.component.html
+++ b/src/app/view/home/home.component.html
@@ -5,7 +5,7 @@
   </section>
 
   <section class="area-buttons">
-    <a routerLink="/add-finances" routerLinkActive="selected" class="finances">
+    <a routerLink="/add-finance" routerLinkActive="selected" class="finances">
       <i class="material-icons">add_circle</i>Add
     </a>
     <a routerLink="/finances" routerLinkActive="selected"class="add-finances">
