--- a/src/app/components/finance/finance-listagem/finance-listagem.component.html
+++ b/src/app/components/finance/finance-listagem/finance-listagem.component.html
@@ -3,7 +3,7 @@
     <!-- Id Column -->
     <ng-container matColumnDef="data">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Data</th>
-      <td mat-cell *matCellDef="let row">{{row.data}}</td>
+      <td mat-cell *matCellDef="let row">{{row.data | date:'dd/MM/yyyy'}}</td>
     </ng-container>
 
     <!-- Name Column -->
@@ -15,13 +15,13 @@
 	 <!-- Name Column -->
     <ng-container matColumnDef="status">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
-      <td mat-cell *matCellDef="let row">{{row.status}}</td>
+      <td mat-cell class="" *matCellDef="let row">{{row.status}}</td>
 	 </ng-container>
 	 
 	 <!-- Name Column -->
     <ng-container matColumnDef="valor">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
-      <td mat-cell *matCellDef="let row">{{row.valor}}</td>
+      <td mat-cell *matCellDef="let row">{{row.valor | currency: "BRL"}}</td>
 	 </ng-container>
 	 
 	 <!-- Name Column -->
@@ -33,7 +33,15 @@
 	 <!-- Name Column -->
     <ng-container matColumnDef="total">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Total</th>
-      <td mat-cell *matCellDef="let row">{{(row.quantidade * row.valor).toFixed(2)}}</td>
+      <td mat-cell *matCellDef="let row">{{(row.quantidade * row.valor) | currency: "BRL"}}</td>
+	 </ng-container>
+
+	 <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ação</th>
+      <td mat-cell *matCellDef="let row">
+			<a routerLink="" class="edit mr-2 pr-2"><i class="material-icons">edit</i></a>
+			<a routerLink="" class="delete"><i class="material-icons">delete</i></a>
+		</td>
 	 </ng-container>
 
 	 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
